--- a/music-view/src/assets/css/sign-up.scss
+++ b/music-view/src/assets/css/sign-up.scss
@@ -7,7 +7,7 @@
   .img {
     margin-top: 24px;
     width: 880px;
-    height: 518px;
+    height: 580px;
   }
 
   .signUp {
@@ -15,10 +15,11 @@
     background-color: $color-white;
     border-radius: 10px;
     width: 350px;
-    height: 412px;
+    height: 474px;
     padding: 30px 30px;
 
     .signUp-head {
+      margin-top: 25px;
       text-align: center;
       margin-bottom: 10px;
       font-size: 20px;
